--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,23 @@
+server.port=8080
+
+
+management.security.enabled=false
+
+
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.properties.org.hibernate.envers.default_schema=_AUDITORIA
+
+spring.application.name=padiola
+spring.profiles.active=dev
+
+logging.file=./target/padiola.log
+
+
+security.oauth2.client.client-authentication-scheme = form
+security.oauth2.client.authentication-scheme = header
+security.oauth2.client.grant-type = authorization_code
+security.oauth2.client.access-token-uri = https://login.salesforce.com/services/oauth2/token
+security.oauth2.client.user-authorization-uri = https://login.salesforce.com/services/oauth2/authorize
+security.oauth2.resource.user-info-uri = https://login.salesforce.com/services/oauth2/userinfo
+
 
