--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 server.port=8080
 
 
-management.security.enabled=false
+#management.security.enabled=false
 
 
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.jpa.properties.org.hibernate.envers.default_schema=_AUDITORIA
+#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+#spring.jpa.properties.org.hibernate.envers.default_schema=_AUDITORIA
 
 spring.application.name=padiola
-spring.profiles.active=dev
+#spring.profiles.active=dev
 
 logging.file=./target/padiola.log
 
