--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,10 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-jdbc</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 		</dependency>
@@ -87,6 +91,8 @@
 			<artifactId>problem-spring-web</artifactId>
 			<version>${problem-spring-web.version}</version>
 		</dependency>
+
+
 	</dependencies>
 
 	<build>
